--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.AndroidTest"
         tools:targetApi="31">
         <activity
+            android:name=".AnalyticsActivity"
+            android:exported="false" />
+        <activity
             android:name=".SuccessActivity"
             android:exported="false" />
         <activity
@@ -27,5 +30,3 @@
     </application>
 
 </manifest>
-
-
